Clicking on animal switches that animal to new view but does not make all other animals views invisible

--- a/resources.qrc
+++ b/resources.qrc
@@ -3,5 +3,6 @@
         <file>shelterview.qml</file>
         <file>settings.txt</file>
         <file>animalview.qml</file>
+        <file>main.qml</file>
     </qresource>
 </RCC>
