Shelter about page

--- a/resources.qrc
+++ b/resources.qrc
@@ -4,5 +4,6 @@
         <file>settings.txt</file>
         <file>animalview.qml</file>
         <file>main.qml</file>
+        <file>aboutShelter.qml</file>
     </qresource>
 </RCC>
